# silverfish-core

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-sdk.yml
scripts/: export_openapi.py  gdrive_authorize.py
