[project]
name = "silverfish-workspace"
version = "0.0.0"
description = "Silverfish — open-source core for an ebook library (Calibre-dialect) exposed as a lib + REST API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }

# This is a workspace root; it ships no code itself. Real packages live under packages/*.
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14",
    "mypy>=1.18",
    "pytest>=8.4",
    "pytest-cov>=7.0",
    "httpx>=0.28",
    "pre-commit>=4.4",
    "types-defusedxml>=0.7",
    # Postgres: the binary driver (native repo + system store) and testcontainers
    # to spin up a real ephemeral Postgres for the repo tests.
    "psycopg[binary]>=3.2",
    "testcontainers[postgres]>=4.8",
    # S3 adapter + its in-process mock for tests (no AWS account/network needed).
    "boto3>=1.35",
    "boto3-stubs[s3]>=1.35",
    "moto[s3]>=5.0",
    # Google Drive adapter (the concrete client). Tests use an in-memory fake,
    # so the lib is only needed to type-check/build the real client.
    "google-api-python-client>=2.140",
    "google-auth>=2.34",
]

[tool.uv.workspace]
members = ["packages/*"]
# sdk-node is a TypeScript package (its own npm/pnpm toolchain), not a Python
# workspace member — exclude it so uv doesn't expect a pyproject.toml there.
exclude = ["packages/sdk-node"]

[tool.uv.sources]
silverfish-core = { workspace = true }
silverfish-api = { workspace = true }

# ----------------------------------------------------------------------------
# Ruff — linter + formatter (runs in pre-commit and CI)
# ----------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["packages/core/src", "packages/api/src"]

[tool.ruff.lint]
# Broad, strict-ish default rule set. We treat lint failures as build failures.
select = [
    "E", "W",      # pycodestyle
    "F",            # pyflakes
    "I",            # isort
    "N",            # pep8-naming
    "UP",           # pyupgrade
    "B",            # flake8-bugbear
    "A",            # flake8-builtins
    "C4",           # flake8-comprehensions
    "SIM",          # flake8-simplify
    "PTH",          # flake8-use-pathlib
    "RUF",          # ruff-specific
    "S",            # flake8-bandit (security)
    "ANN",          # flake8-annotations (enforce typing at boundaries)
    "TID",          # flake8-tidy-imports
]
ignore = [
    "ANN401",  # allow explicitly-justified dynamic typing is still forbidden by policy; kept off via mypy
]

[tool.ruff.lint.per-file-ignores]
# Tests may use asserts, don't need return-type annotations, build small SQL
# strings from hardcoded table names (no user input), and use dummy credentials.
"**/tests/**" = ["S101", "ANN201", "ANN001", "S608", "S105", "S106"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

# ----------------------------------------------------------------------------
# mypy — strict static typing (zero `any`, nothing committed with type breakage)
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
# "Zero any" in *our* code: forbid bare generics, untyped defs, values decaying
# to Any from untyped imports. We deliberately do NOT set `disallow_any_explicit`
# because it forbids inheriting from Pydantic/FastAPI base classes (whose own
# stubs mention Any) — that overshoots without making our code safer.
disallow_any_generics = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_reexport = true
mypy_path = ["packages/core/src", "packages/api/src"]
files = ["packages/core/src", "packages/api/src", "packages/core/tests", "packages/api/tests"]

# Google API client libraries ship no type stubs / py.typed. Don't let their
# untyped surface (used only in the gdrive adapter and factory) decay our code
# to Any-errors; we keep our own signatures typed against the DriveClient port.
[[tool.mypy.overrides]]
module = ["googleapiclient.*", "google.*", "google_auth_oauthlib.*"]
ignore_missing_imports = true

# testcontainers (dev/test only) ships no type stubs / py.typed; used solely to
# spin up an ephemeral Postgres in the repo tests.
[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "packages/api/tests"]
addopts = "-ra --strict-markers --strict-config"
pythonpath = []
filterwarnings = [
    "error",
    # Starlette's TestClient still imports httpx in a way it now deprecates;
    # it is third-party and out of our control. Tolerate just this one. The
    # category is starlette's own StarletteDeprecationWarning, matched by message.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
    # When Docker is unreachable, the Postgres testcontainer's docker-py client
    # leaks its unix socket to the daemon; a later GC raises an unraisable
    # ResourceWarning that (as an error) would fail whatever unrelated test is
    # running. The socket is docker-py's to close, not ours, and this only bites
    # on machines without Docker (CI has it). Tolerate just that socket warning.
    "ignore:unclosed <socket.socket:ResourceWarning",
]

[tool.coverage.run]
branch = true
source = ["silverfish_core", "silverfish_api"]
